Add gpt2 tutorial

--- a/gpt2_probing/probing_gpt_data_collection_rus.ipynb
+++ b/gpt2_probing/probing_gpt_data_collection_rus.ipynb
@@ -466,7 +466,7 @@
       "source": [
         "### **Набор данных**\n",
         "\n",
-        "Будем работать с [people dataset](https://www.nature.com/articles/s41597-022-01369-4), предобработанным и очищенным для данного эксперимента. Датасет, необходимый для работы вы можете скачать с [github](https://github.com/SadSabrina/XAI-open_materials/raw/refs/heads/main/gpt2_probing/people_dataset_prepared_most_popular.csv). "
+        "Будем работать с [people dataset](https://www.nature.com/articles/s41597-022-01369-4), предобработанным и очищенным для данного эксперимента. Датасет, необходимый для работы вы можете скачать с [google disc](https://drive.google.com/file/d/1QbEbJlABsbhzyKfQ6L4ES1rH3wbbuPfG/view?usp=sharing). "
       ]
     },
     {
@@ -494,7 +494,7 @@
       },
       "outputs": [],
       "source": [
-        "#!wget https://github.com/SadSabrina/XAI-open_materials/raw/refs/heads/main/gpt2_probing/people_dataset_prepared_most_popular.csv.zip"
+        "#!wget"
       ]
     },
     {
@@ -510,7 +510,7 @@
       },
       "outputs": [],
       "source": [
-        "#!unzip /Users/sabrinasadieh/Code/XAI-open_materials/gpt2_probing/people_dataset_prepared_most_popular.csv.zip"
+        "#!unzip "
       ]
     },
     {
