--- a/gpt2_probing/probing_eda_eng.ipynb
+++ b/gpt2_probing/probing_eda_eng.ipynb
@@ -427,18 +427,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Чтобы достичь разного уровня объясненной дисперсии  на первом слое, необходимо компонент:\n",
-    "- для объясненной дисперсии 0.7 = 480\n",
-    "- для объясненной дисперсии 0.8 = 700\n",
-    "- для объясненной дисперсии 0.9 = 1100\n",
-    "- для объясненной дисперсии 0.95 = 1500"
+    "To achieve different levels of explained variance in the first layer, the component is needed:\n",
+    "- for explained variance 0.7 = 480\n",
+    "- for explained variance 0.8 = 700\n",
+    "- for explained variance 0.9 = 1100\n",
+    "- for explained variance 0.95 = 1500"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Количество компонент для среднего слоя. "
+    "Number of components for the middle layer."
    ]
   },
   {
@@ -472,18 +472,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Чтобы достичь разного уровня объясненной дисперсии на среднем слое, необходимо компонент:\n",
-    "- для объясненной дисперсии 0.7 = 175\n",
-    "- для объясненной дисперсии 0.8 = 310\n",
-    "- для объясненной дисперсии 0.9 = 600\n",
-    "- для объясненной дисперсии 0.95 = 930"
+    "To achieve different levels of explained variance in the middle layer, the component is needed:\n",
+    "- for explained variance 0.7 = 175\n",
+    "- for explained variance 0.8 = 310\n",
+    "- for explained variance 0.9 = 600\n",
+    "- for explained variance 0.95 = 930"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Количество компонент для последнего слоя. "
+    "Number of components for the last layer."
    ]
   },
   {
@@ -517,47 +517,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Чтобы достичь разного уровня объясненной дисперсии на среднем слое, необходимо компонент:\n",
-    "- для объясненной дисперсии 0.7 = 2\n",
-    "- для объясненной дисперсии 0.8 = 4\n",
-    "- для объясненной дисперсии 0.9 = 7\n",
-    "- для объясненной дисперсии 0.95 = 17\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "98.17204301075269"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "100 - 17/930*100"
+    "To achieve different levels of explained variance in the middle layer, the component is needed:\n",
+    "- for explained variance 0.7 = 2\n",
+    "- for explained variance 0.8 = 4\n",
+    "- for explained variance 0.9 = 7\n",
+    "- for explained variance 0.95 = 17\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Чем глубже слой, тем более значимо меньше нам нужно компонент. Причем, скорее всего, где-то в модели есть переломный момент — когда уменьшение количества необхоимых компонент перстает значимо снижаться. Скорее всего, такой момент наступает после среднего слоя (от первого к центральному снижение на 65, 56, 46, 38 процентов для дисперсий 0.7, 0.8, 0.9, 0.95 соответственно, от центрального к последнему на 99, 98.7, 98.8, 98.1 процентов). "
+    "The deeper the layer, the significantly fewer components we need. Moreover, most likely, somewhere in the model there is a turning point - when the decrease in the number of required components ceases to decrease significantly. Most likely, such a moment occurs after the middle layer (from the first to the central one, a decrease of 65, 56, 46, 38 percent for variances of 0.7, 0.8, 0.9, 0.95 respectively, from the central to the last one by 99, 98.7, 98.8, 98.1 percent)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Обучение зонда**\n",
+    "## **Probe training**\n",
     "\n",
-    "Обучим модели на уровне сохраненной дисперсии 0.9. Прогнозировать будем года, спрогнозированные моделью, а не истинные, поскольку модель не всегда дает верный ответ и, кроме того, если его не дает, значит бесполезно искать знания о нём внутри. "
+    "We will train the models at the level of preserved variance 0.9. We will predict the years predicted by the model, and not the true ones, since the model does not always give the correct answer and, in addition, if it does not give it, then it is useless to look for knowledge about it inside."
    ]
   },
   {
@@ -665,7 +645,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Для истинных `y` MAE, MSE стабильно хуже. "
+    "For true `y` MAE, MSE is consistently worse."
    ]
   },
   {
@@ -720,7 +700,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В среднем, на первом среднем модель ошибается от истины на 17 лет. "
+    "On average, on the mid layer, the model is 17 years off the mark."
    ]
   },
   {
@@ -748,7 +728,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Для истинных `y` MAE, MSE стабильно хуже. "
+    "For true `y` MAE, MSE is consistently worse."
    ]
   },
   {
@@ -803,7 +783,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В среднем, на первом слое модель ошибается от истины на 14 лет. "
+    "On average, at the last layer the model is 14 years off from the truth."
    ]
   },
   {
@@ -831,23 +811,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Для истинных `y` MAE, MSE стабильно хуже. "
+    "For true `y` MAE, MSE is consistently worse."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Выводы**\n",
+    "### **Conclusions**\n",
     "\n",
-    "Лучшая модель по результату получается на среднем слое. Это позволяет выдвинуть гипотезу о том, что, если в модели отдельно представлена информации, связанныя с числами, то она представлена ближе к центру. Но почему $R^2$ стабильно меньше или около нуля? Посмотрим на прогнозы"
+    "The best model by the result is obtained on the middle layer. This allows us to put forward a hypothesis that if the model separately presents information related to numbers, then it is presented closer to the center. But why is $R^2$ consistently less than or close to zero? Let's look at the forecasts"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Анализ прогнозов**"
+    "# **Forecast Analysis**"
    ]
   },
   {
@@ -962,7 +942,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Прогнозы модели истинной модели кусочны, причем большая часть сконцентрирована около 1860-1900 годов. Прогнозы же линейных моделей похожи на нормальное распределение. Эти факты делают второе слагаемое в $r^2$ большим, так как в целом линейная модель требует нормального распределения целевой переменной. Можно попробовать decision tree. Оно переобучается, но дает картинку лучше. "
+    "The true model's predictions are piecemeal, with most of them concentrated around 1860-1900. The linear models' predictions are similar to a normal distribution. These facts make the second term in $r^2$ large, since a linear model generally requires a normal distribution of the target variable. You can try a decision tree. It overfits, but gives a better picture."
    ]
   },
   {
@@ -1024,20 +1004,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Выводы:\n",
+    "### **Conclusions:**\n",
     "\n",
-    "Анализ зонда позволил приблизиться к оценке расположения знаний внутри модели. В случае эксперимента в туториале, лучшими оказались средние слои, что не всегда справедливо. Кроме того, сам анализ зондов можно улучшать, например строить не линейную модель (например, дерево) или ограничить анализ прогнозами до 1900 года (так как других прогнозов всего 8.9% от данных). Надеюсь, туториал станет хорошей отправной точкой для вас! \n",
+    "Probe analysis allowed us to get closer to assessing the location of knowledge within the model. In the case of the experiment in the tutorial, the middle layers turned out to be the best, which is not always true. In addition, the probe analysis itself can be improved, for example, by building a non-linear model (for example, a tree) or limiting the analysis to forecasts up to 1900 (since other forecasts are only 8.9% of the data). I hope the tutorial will be a good starting point for you!\n",
     "\n",
-    "Благодарю за ваше время! Присоединяйтесь к [каналу в телеграм](https://t.me/jdata_blog), чтобы видеть новые туториалы :) Также приглашаю пройти мой [rурс](https://stepik.org/a/198640) по explainable AI и, конечно, буду рада видеть в сети [LinkedIn](https://www.linkedin.com/in/sabrina-sadiekh-35181a286/).\n",
+    "Thank you for your time! Join the [telegram channel](https://t.me/jdata_blog) to see new tutorials :) I also invite you to take my [course](https://stepik.org/a/198640) on explainable AI and, of course, I will be glad to see you on the [LinkedIn](https://www.linkedin.com/in/sabrina-sadiekh-35181a286/) network.\n",
     "\n",
-    "Успешных вам проектов!\n",
-    "Ваш Дата-автор!"
+    "Successful projects to you!\n",
+    "Your Data-author!"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
