--- a/gpt2_probing/probing_gpt_data_collection_eng.ipynb
+++ b/gpt2_probing/probing_gpt_data_collection_eng.ipynb
@@ -824,6 +824,27 @@
         "#     if cnt % 500 == 0:\n",
         "#       print(cnt)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "3780e054",
+      "metadata": {},
+      "source": [
+        "### **Conclusions:**\n",
+        "\n",
+        "Part 2 [here](https://github.com/SadSabrina/XAI-open_materials/blob/main/gpt2_probing/probing_eda_eng.ipynb).\n",
+        "\n",
+        "Thank you for your time! Join the [telegram channel](https://t.me/jdata_blog) to see new tutorials :) I also invite you to take my [course](https://stepik.org/a/198640) on explainable AI and, of course, I will be glad to see you on the [LinkedIn](https://www.linkedin.com/in/sabrina-sadiekh-35181a286/) network.\n",
+        "\n",
+        "Successful projects to you!\n",
+        "Your Data-author!"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5106c20b",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
