--- a/gpt2_probing/probing_gpt_data_collection_rus.ipynb
+++ b/gpt2_probing/probing_gpt_data_collection_rus.ipynb
@@ -829,6 +829,20 @@
         "#     if cnt % 500 == 0:\n",
         "#       print(cnt)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "cf8cb5a3",
+      "metadata": {},
+      "source": [
+        "\n",
+        "Благодарю за ваше время! Часть с EDA [здесь](https://github.com/SadSabrina/XAI-open_materials/blob/main/gpt2_probing/probing_eda_rus.ipynb). \n",
+        "\n",
+        "Присоединяйтесь к [каналу в телеграм](https://t.me/jdata_blog), чтобы видеть новые туториалы :) Также приглашаю пройти мой [rурс](https://stepik.org/a/198640) по explainable AI и, конечно, буду рада видеть в сети [LinkedIn](https://www.linkedin.com/in/sabrina-sadiekh-35181a286/).\n",
+        "\n",
+        "Успешных вам проектов!\n",
+        "Ваш Дата-автор!"
+      ]
     }
   ],
   "metadata": {
