Add YouTue CAM tutorial

--- a/CAM_yt/inro_to_CAM_yt.ipynb
+++ b/CAM_yt/inro_to_CAM_yt.ipynb
@@ -23,6 +23,8 @@
         "\n",
         "Приступим!\n",
         "\n",
+        "[YouTube video](https://www.youtube.com/watch?v=6cOWGzv_ITQ)\n",
+        "\n",
         "\n"
       ]
     },
